@@ -1,5 +1,10 @@
 2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* src/bacon-video-widget-gst.c: (cb_iterate):
+	  Support change in duration (CDs, VBR MP3, ...).
+
+2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* src/bacon-video-widget-gst.c:
 	(bacon_video_widget_can_get_frames):
 	  Give good error messages if thumbnailing fails.
